# Cpp_Hw_HSSE

./: .gitignore  02.02.cpp  02.03.cpp  02.06.cpp  first_lesson.cpp
1week/: .gitignore  02.01.cpp  02.02.cpp  02.03.cpp  02.06.cpp
2week/: 02.09.cpp  02.10.cpp  02.12.cpp  02.14.cpp
3week/: .gitignore
4week/: 03.06.cpp  03.07-03.08.cpp
5week/: .gitignore  04.01.cpp  04.02.cpp  04.05.cpp  04.07.cpp  04.08.cpp
6week/: 04.12.cpp  04.13.cpp
7week/: 05.02.cpp  05.07.cpp  05.17.cpp  05.18.cpp  05.23.cpp
8week/: .gitignore
8week/01.01/: 01.01 0.cpp  01.01 1.cpp  01.01 2.cpp  01.01 3.cpp
8week/06.01/: Entity.cpp  Entity.hpp  main.cpp
8week/06.03/: CMakeLists.txt  Entity.cxx  Entity.ixx  Entity.сxx  Entity_module.cppm  main.cpp
9week/: 07.01.cpp  07.02.cpp  07.03.cpp  07.05.cpp  07.06.md
